Fix some performance issues flagged by FindBugs:  - use static valueOf() instead of new Integer() etc constructors.  - Instead of iterating over the keyset of a HashMap, iterate over the entrySet. This saves another lookup of the value once you have the key.
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@825974 13f79535-47bb-0310-9956-ffa450edef68